--- a/ProductsWebApi/ProductsWebApi.csproj
+++ b/ProductsWebApi/ProductsWebApi.csproj
@@ -9,5 +9,11 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="KubernetesDeployment.yaml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 
 </Project>
