--- a/ProductsWebApi/KubernetesDeployment.yaml
+++ b/ProductsWebApi/KubernetesDeployment.yaml
@@ -20,7 +20,7 @@ spec:
         ports:
         - containerPort: 8080
       imagePullSecrets:
-      - name: devopsdemoacesecret
+      - name: devopsdemoacesecret2
 ---
 apiVersion: v1
 kind: Service
